# backend

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  lefthook.yml  skaffold.yaml  template.skaffold.env
modules/auth/: .env.example  Dockerfile  Makefile  Pipfile  README.md  alembic.ini  create_migration.sh  entrypoint.sh  export_schema.sh  extract_schema.sh  prompt_auth.md  pyproject.toml  user_full_view.sql
modules/auth/alembic/: env.py
modules/auth/alembic/versions/: 001_create_user_full_view.py  36d45956fe33_.py  da1b2c036e80_.py
modules/auth/graphql/: schema.graphql
modules/auth/helm/: values.yaml
modules/auth/helm/templates/: NOTES.txt  _helpers.tpl  configmap.yml  deployment-backend.yml  deployment-db.yml  ingress.yaml  secrets.yaml  services.yaml
modules/auth/scripts/: migrate_user_ids.py
modules/auth/src/: initialize.py  main.py  settings.py
modules/auth/src/core/: auth.py  cache.py  config.py  connection.py  context.py  exceptions.py  verify_jwt.py
modules/auth/src/exceptions/: exceptions.py
modules/auth/src/logic/: __init__.py  federation.py  invite_users.py  roles.py  user.py  utils.py
modules/auth/src/models/: __init__.py  response.py  roles.py  scalers.py  sort_filter.py  user.py  user_response.py
modules/auth/src/routes/: __init__.py  health.py
modules/auth/src/schema/: __init__.py  permisions.py  permissions.py  roles.py  user.py
modules/auth/tests/: conftest.py
modules/auth/tests/datafixtures/: users.json
modules/auth/tests/integration/: test_health_endpoint.py  test_invitation_endpoints.py  test_main.py  test_roles_endpoint.py  test_user_endpoint.py
modules/auth/tests/integration/datafixtures/: users.json
modules/auth/tests/unit/core/: test_auth.py
modules/auth/tests/unit/core/datafixtures/: users.json
modules/auth/tests/unit/logic/: test_email_filter_combined.py  test_user_helper_functions.py  test_users.py
modules/organization/: .env.example  Dockerfile  Makefile  Pipfile  README.md  entrypoint.sh  export_schema.sh  extract_schema.sh  pyproject.toml
modules/organization/graphql/: schema.graphql
modules/organization/helm/: Chart.yaml  values.yaml
modules/organization/helm/templates/: NOTES.txt  configmap.yml  deployment-backend.yml  secrets.yaml  services.yaml
modules/organization/src/: logging.yaml  main.py
modules/organization/src/core/: auth.py  cache.py  config.py  connection.py  context.py  verify_jwt.py
modules/organization/src/exceptions/: exceptions.py
modules/organization/src/logic/: __init__.py  federation.py  organization.py  roles.py
modules/organization/src/models/: __init__.py  country_codes.py  organization.py  response.py  sort_filter.py  stakeholder.py  user.py
modules/organization/src/routes/: __init__.py
modules/organization/src/schema/: __init__.py  organization.py
modules/organization/tests/: conftest.py
modules/organization/tests/integration/: conftest.py  test_main.py  test_organization_endpoints.py  test_user_organization_flow.py
modules/organization/tests/performance/: test_relationship_resolution.py
modules/organization/tests/unit/: conftest.py  test_federation_error_handling.py  test_organization_creation.py  test_user_resolver.py
modules/organization/tests/unit/logic/: conftest.py  test_organization.py
modules/organization/tests/unit/models/: conftest.py  test_user.py
modules/projects/: .env.example  Dockerfile  Makefile  Pipfile  README.md  entrypoint.sh  export_schema.sh  extract_schema.sh  manual-testing.md  pyproject.toml  schema.gql
modules/projects/graphql/: schema.graphql
modules/projects/helm/: values.yaml
modules/projects/helm/templates/: NOTES.txt  configmap.yml  deployment-backend.yml  deployment-db.yml  services.yaml
modules/projects/src/: initialize.py  main.py
modules/projects/src/core/: auth.py  config.py  connection.py  context.py  exceptions.py
modules/projects/src/logic/: __init__.py  assignment.py  contribution.py  federation.py  json_schema.py  notifications.py  openbdf.py  permissions.py  project.py  project_service.py  role_mapping.py
modules/projects/src/models/: __init__.py  contribution.py  project.py  project_state.py  response.py  sort_filter.py  supertokens.py  user.py  user_role.py
modules/projects/src/models/database/: db_model.py  methods.py
modules/projects/src/models/openbdf/: __init__.py  country_cache.json  enums.py  inputs.py  types.py  utils.py
modules/projects/src/models/project/: __init__.py  _locations.py  db_model.py  enums.py  filters.py  inputs.py  methods.py  project.py  types.py
modules/projects/src/routes/: __init__.py  openbdf.py
modules/projects/src/schema/: __init__.py  contribution.py  project.py  project_schema.py
modules/projects/src/schema/resolvers/: project_mutations.py  project_queries.py
modules/projects/tests/: conftest.py
modules/projects/tests/contract/: test_approve_project.py  test_assign_project.py  test_assigned_projects.py  test_delete_project.py  test_lock_project.py  test_my_projects.py  test_projects_by_state.py  test_projects_for_review.py  test_projects_to_delete.py  test_projects_to_publish.py  test_projects_to_unpublish.py  test_publish_project.py  test_reject_project.py  test_submit_for_review.py  test_unlock_project.py  test_unpublish_project.py
modules/projects/tests/integration/: conftest.py  test_admin_assign_project.py  test_admin_lock_unlock_project.py  test_admin_publish_project.py  test_admin_unpublish_project.py  test_concurrent_access.py  test_contribution_endpoint.py  test_contributor_submit_for_review.py  test_main.py  test_openbdf.py  test_openbdf_endpoint.py  test_project.py  test_project_endpoint.py  test_reviewer_approve_project.py  test_reviewer_reject_project.py  test_role_based_access.py  test_state_transitions.py  test_user_delete_project.py
modules/projects/tests/integration/datafixtures/: project_with_metadata.json
modules/projects/tests/unit/: test_permissions.py  test_project_service.py  test_unit_state_transitions.py
modules/projects/tests/unit/logic/: conftest.py  test_contribution.py  test_openbdf.py
(+50 files in other folders)
