[project]
name = "auth"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[all]",
    "uvicorn[standard]",
    "strawberry-graphql[fastapi,cli]>=0.134.0",
    "supertokens-python==0.27.0",
    "pyyaml",
    "aiocache",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "asgi-lifespan",
    "docker",
    "pytest",
    "pytest-asyncio",
    "pytest-env", 
    "pytest-datafixtures",
    "pytest-mock",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests/"]
asyncio_mode = "auto"

env = [
    "SERVER_NAME=Auth Test",
    "SERVER_HOST=http://localhost:6000",
    "ROUTER_URL=http://localhost:7000",
    "CONNECTION_URI=http://localhost:3568",
    "BACKEND_CORS_ORIGINS=http://localhost:9000",
    "API_KEY=",
    "SMTP_HOST=epfl.ch",
    "SMTP_PORT=3131",
    "SMTP_EMAIL=no-reply+gbdi@epfl.ch",
    "SMTP_NAME=GBDI local dev",
    "SMTP_PASSWORD=",
    "SMTP_USERNAME=",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "docker>=7.1.0",
    "pytest-asyncio>=1.1.0",
    "pytest-datafixtures>=1.1.0",
    "pytest-env>=1.1.5",
    "ruff>=0.12.10",
]
