[project]
name = "auth"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[all]",
    "uvicorn[standard]",
    "strawberry-graphql[fastapi,cli]>=0.134.0",
    "supertokens-python>=0.27.0",
    "pyyaml",
    "aiocache",
    "tenacity",
    "sqlmodel>=0.0.25",
    "asyncpg>=0.30.0",
    "alembic>=1.16.5",
    "sqlalchemy-utils>=0.42.0",
    "pydevd-pycharm>=253.17525.96",
    "greenlet>=3.0.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests/"]
asyncio_mode = "auto"

env = [
    "SERVER_NAME=Auth Test",
    "SERVER_HOST=http://localhost:6000",
    "ROUTER_URL=http://localhost:7000",
    "CONNECTION_URI=http://localhost:3568",
    "BACKEND_CORS_ORIGINS=http://localhost:9000",
    "API_KEY=",
    "SMTP_HOST=epfl.ch",
    "SMTP_PORT=3131",
    "SMTP_EMAIL=no-reply+gbdi@epfl.ch",
    "SMTP_NAME=GBDI local dev",
    "SMTP_PASSWORD=",
    "SMTP_USERNAME=",
    "POSTGRES_USER=user",
    "POSTGRES_PASSWORD=password",
    "POSTGRES_HOST=localhost",
    "POSTGRES_DB=auth",
    "POSTGRES_PORT=5432",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "docker>=7.1.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-datafixtures>=1.1.0",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.0",
    "pre-commit>=3.6.0",
    "ruff>=0.12.10",
    "mongomock-motor",
    "psycopg2-binary>=2.9.10",
]


[tool.alembic]

# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/alembic"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
# file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]

# timezone to use when rendering the date within the migration file
# as well as the filename.
# If specified, requires the python>=3.9 or backports.zoneinfo library and tzdata library.
# Any required deps can installed by adding `alembic[tz]` to the pip requirements
# string value is passed to ZoneInfo()
# leave blank for localtime
# timezone =

# max length of characters to apply to the "slug" field
# truncate_slug_length = 40

# set to 'true' to run the environment during
# the 'revision' command, regardless of autogenerate
# revision_environment = false

# set to 'true' to allow .pyc and .pyo files without
# a source .py file to be detected as revisions in the
# versions/ directory
# sourceless = false

# version location specification; This defaults
# to <script_location>/versions.  When using multiple version
# directories, initial revisions must be specified with --version-path.
# version_locations = [
#    "%(here)s/alembic/versions",
#    "%(here)s/foo/bar"
# ]


# set to 'true' to search source files recursively
# in each "version_locations" directory
# new in Alembic version 1.10
# recursive_version_locations = false

# the output encoding used when revision files
# are written from script.py.mako
# output_encoding = "utf-8"

# This section defines scripts or Python functions that are run
# on newly generated revision scripts.  See the documentation for further
# detail and examples
# [[tool.alembic.post_write_hooks]]
# format using "black" - use the console_scripts runner,
# against the "black" entrypoint
# name = "black"
# type = "console_scripts"
# entrypoint = "black"
# options = "-l 79 REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
# name = "ruff"
# type = "module"
# module = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# Alternatively, use the exec runner to execute a binary found on your PATH
# name = "ruff"
# type = "exec"
# executable = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
