[project]
name = "auth"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[all]",
    "uvicorn[standard]",
    "strawberry-graphql[fastapi,cli]>=0.283.0",
    "supertokens-python==0.27.0",
    "pyyaml",
    "aiocache",
    "tenacity",
    "cachetools>=6.2.1",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests/"]
asyncio_mode = "auto"

env = [
    "SERVER_NAME=Auth Test",
    "SERVER_HOST=http://localhost:6000",
    "ROUTER_URL=http://localhost:7000",
    "CONNECTION_URI=http://localhost:3568",
    "BACKEND_CORS_ORIGINS=http://localhost:9000",
    "DB_USER=testuser",
    "DB_PASSWORD=testpass",
    "DB_NAME=auth_test",
    "DB_HOST_PORT=5433",
    "DB_HOST=localhost",
    "API_KEY=",
    "SMTP_HOST=epfl.ch",
    "SMTP_PORT=3131",
    "SMTP_EMAIL=no-reply+gbdi@epfl.ch",
    "SMTP_NAME=GBDI local dev",
    "SMTP_PASSWORD=",
    "SMTP_USERNAME=",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "docker>=7.1.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-datafixtures>=1.1.0",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.0",
    "pre-commit>=3.6.0",
    "ruff>=0.12.10",
    "mongomock-motor",
]
