[project]
name = "organization"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[all]",
    "uvicorn[standard]",
    "strawberry-graphql[fastapi,cli]>=0.134.0",
    "supertokens-python==0.27.0",
    "pyyaml",
    "aiocache",
    "tenacity",
    "beanie",
    "httpx",
    "motor",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests/"]
asyncio_mode = "auto"
markers = [
    "performance: marks tests as performance tests",
    "integration: marks tests as integration tests"
]

env = [
    "SERVER_NAME=Organization Test",
    "SERVER_HOST=http://localhost:6000",
    "ROUTER_URL=http://localhost:7000",
    "MONGO_HOST=localhost",
    "MONGO_USER=testuser",
    "MONGO_PASSWORD=mypassword",
    "MONGO_DB=organization",
    "MONGO_PORT=27017",
    "SUPERTOKENS_CONNECTION_URI=http://localhost:3569",
    "SUPERTOKENS_API_KEY=",
    "LOG_LEVEL=ERROR"
]

[tool.ruff]
line-length = 120
target-version = "py312"


[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "docker>=7.1.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-datafixtures>=1.1.0",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.0",
    "pre-commit>=3.6.0",
    "ruff>=0.12.10",
    "mongomock-motor",
]
